<resources>
    <string name="app_name">CoolWeather</string>
    <string name="canary_app_name">Canary</string>
    <string name="action_settings">Settings</string>
    <string name="testInternet">TestInternet</string>
    <string name="chooseArea">ChooseArea</string>
    <string name="to">~</string>
    <string name="title_weather_activity">WeatherActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="github">github.com/alwaystest</string>
    <string name="title_activity_settings">Settings</string>


    <string name="Settings">Settings</string>
    <string name="canary_entrance">技术测试入口</string>
    <string name="configure">确认</string>
    <string name="publish">发布</string>
    <string name="china">中国</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="degree">°</string>
    <string name="no_data">暂无数据</string>
    <string name="notification_city_not_support">Sorry, City Not Supported</string>
    <string name="synchronizing">同步中……</string>
    <string name="syn_failed">同步失败</string>
    <string name="btn_block_test">BlockQueue</string>
    <string name="btn_write_test">WriteTest</string>
    <string name="btn_test_notch">NotchTest</string>
    <string name="btn_gl_camera">GLCamera</string>
    <string name="btn_camera2">Camera2</string>
    <string name="btn_notification_channel">notification_channel</string>
    <string name="hint_input_key">请输入 API Key</string>
    <string name="submit">提交</string>
    <string name="notification_permission_denied">请开启通知权限先</string>
    <string name="notification_service_started">Service started</string>
    <string name="btn_notification_service">start observe notification</string>
    <string name="show_dialog_after_finish">show_dialog_after_finish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
