<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/chooseArea"
            android:icon="@drawable/logo"
            android:title="@string/chooseArea"/>
        <item
            android:id="@+id/settings"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/Settings"/>
        <item
                android:id="@+id/canary_entrance"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/canary_entrance"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>